--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.database=bitnami_joomla
+spring.data.mongodb.database=stupid
 spring.data.mongodb.uri=mongodb://root:Hx42ts5aja9i@ec2-54-171-243-247.eu-west-1.compute.amazonaws.com:27017
